--- a/.gitignore
+++ b/.gitignore
@@ -2,5 +2,6 @@
 example/Example
 venv
 cffi/example_node/node_modules
+cffi_dist/example_node/package-lock.json
 cffi_dist/example_node/node_modules
 examples_externals
