--- a/.gitignore
+++ b/.gitignore
@@ -3,5 +3,6 @@ example/Example
 venv
 cffi/example_node/node_modules
 cffi_dist/example_node/package-lock.json
+cffi_dist/example_node/index_ftl_cookies.js
 cffi_dist/example_node/node_modules
 examples_externals
