--- a/.gitignore
+++ b/.gitignore
@@ -4,5 +4,6 @@ venv
 cffi/example_node/node_modules
 cffi_dist/example_node/package-lock.json
 cffi_dist/example_node/index_ftl_cookies.js
+cffi_dist/example_node/index_nike_cookies.js
 cffi_dist/example_node/node_modules
 examples_externals
