added typescrpt example;

--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,9 @@
 .idea
 example/Example
 venv
-cffi/example_node/node_modules
+cffi_dist/example_typescript/node_modules
+cffi_dist/example_typescript/build
+cffi_dist/example_typescript/package-lock.json
 cffi_dist/example_node/package-lock.json
-cffi_dist/example_node/index_ftl_cookies.js
-cffi_dist/example_node/index_nike_cookies.js
 cffi_dist/example_node/node_modules
-examples_externals
 /cffi_dist/dist/
