--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-.idea
+.idea/
 example/Example
 venv
 cffi/example_node/node_modules
@@ -7,3 +7,4 @@ cffi_dist/example_node/index_ftl_cookies.js
 cffi_dist/example_node/index_nike_cookies.js
 cffi_dist/example_node/node_modules
 **/.DS_Store
+.tool-versions
