--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,6 +17,7 @@ jobs:
     working_directory: ~/<< pipeline.parameters.service-name >>
     steps:
       - checkout
+      - go/install
       - go/load-cache
       - go/mod-download
       - go/save-cache
